--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@types/react-dom": "18.2.4",
     "auth0": "^3.4.0",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
+    "next-http-proxy-middleware": "^1.2.5",
+    "next-intl": "^2.14.6",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
