uses hosted backend

--- a/.env.local
+++ b/.env.local
@@ -7,3 +7,5 @@ AUTH0_CLIENT_SECRET='CEX-O3mFPr6mn7EzB86yUgvBDBvl0Lh2dUJjvMyR7hYQG0Z1sjhseRtVUAQ
 
 AUTH0_AUDIENCE='https://dev-jaws.uk.auth0.com/api/v2/'
 AUTH0_SCOPE='openid profile email'
+
+BACKEND_BASE_URL='https://jobshark.bravepond-dfd63b32.uksouth.azurecontainerapps.io/'
